[gd_scene load_steps=2 format=3 uid="uid://dhv5yxnb4p7wg"]

[ext_resource type="Script" path="res://scripts/ui/GameUI.gd" id="1"]

[node name="GameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1")

[node name="TopBar" type="Panel" parent="."]
anchor_right = 1.0
custom_minimum_size = Vector2(0, 60)
offset_bottom = 60.0

[node name="TimeLabel" type="Label" parent="TopBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -15.0
offset_right = 100.0
offset_bottom = 15.0
text = "00:00"
label_settings = null
horizontal_alignment = 1
vertical_alignment = 1

[node name="PopulationLabel" type="Label" parent="TopBar"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -15.0
offset_right = 200.0
offset_bottom = 15.0
text = "人口: 3"
vertical_alignment = 1

[node name="EraLabel" type="Label" parent="TopBar"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -15.0
offset_right = -20.0
offset_bottom = 15.0
text = "太古時代"
horizontal_alignment = 2
vertical_alignment = 1

[node name="DebugPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 320.0
offset_bottom = -20.0

[node name="SpeedLabel" type="Label" parent="DebugPanel"]
offset_left = 10.0
offset_top = 10.0
offset_right = 290.0
offset_bottom = 40.0
text = "速度: x1"

[node name="SpeedSlider" type="HSlider" parent="DebugPanel"]
offset_left = 10.0
offset_top = 40.0
offset_right = 290.0
offset_bottom = 60.0
min_value = 1.0
max_value = 1000.0
value = 1.0